--- a/packages/playground/vue3/index.html
+++ b/packages/playground/vue3/index.html
@@ -9,6 +9,8 @@
         '<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0' +
         (coverSupport ? ', viewport-fit=cover' : '') + '" />')
     </script>
+    <script src="https://cdn.jsdelivr.net/npm/vue@3.3.4/dist/vue.global.prod.js"></script>
+    
     <title></title>
     <!--preload-links-->
     <!--app-context-->
